--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Загрузить данные из Excel</title>
+    <title>Загрузка файла</title>
 </head>
 <body>
-    <h1>Загрузить данные из Excel</h1>
-    <form method="POST" enctype="multipart/form-data">
-        <label for="file">Выберите файл:</label>
-        <input type="file" id="file" name="file" accept=".xlsx" required>
-        <br>
+    <h1>Загрузить файл Excel</h1>
+    <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
+        <input type="file" name="file" accept=".xlsx" required>
         <button type="submit">Загрузить</button>
     </form>
     <a href="{{ url_for('index') }}">Назад</a>
