сохранение данных в эксель

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,7 @@
     <h1>Список распределений</h1>
     <a href="{{ url_for('add_distribution') }}">Добавить распределение</a>
     <a href="{{ url_for('upload') }}">Загрузить данные из Excel</a>
+    <a href="{{ url_for('save') }}"> Сохранить распределения в Excel</a>
     <table>
         <tr>
             <th>ID</th>
