сохранение данных в эксель

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,10 @@
     <a href="{{ url_for('save') }}"> Сохранить распределения в Excel</a>
     <table>
         <tr>
-            <th>ID</th>
-            <th>ID Студента</th>
-            <th>ID Темы</th>
-            <th>ID Руководителя</th>
+            <th>ID Распределения</th>
+            <th>Студент</th>
+            <th>Тема</th>
+            <th>Руководитель</th>
             <th>Действия</th>
         </tr>
         {% for distribution in distributions %}
