--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,9 @@
 <body>
     <h1>Список распределений</h1>
     <a href="{{ url_for('add_distribution') }}">Добавить распределение</a>
-    <a href="{{ url_for('upload') }}">Загрузить данные из Excel</a>
+<!--    <a href="{{ url_for('upload') }}">Загрузить данные из Excel</a>-->
     <a href="{{ url_for('save') }}"> Сохранить распределения в Excel</a>
+    <a href="{{url_for('display_students')}}">Студенты</a>
     <table>
         <tr>
             <th>ID Распределения</th>
@@ -59,9 +60,9 @@
         {% for distribution in distributions %}
         <tr>
             <td>{{ distribution.distribution_id }}</td>
-            <td>{{ distribution.student_id }}</td>
-            <td>{{ distribution.theme_id }}</td>
-            <td>{{ distribution.adviser_id }}</td>
+            <td>{{ distribution.student.firstname }} {{ distribution.student.lastname }}</td>
+            <td>{{ distribution.theme.theme_name }}</td>
+            <td>{{ distribution.adviser.firstname }} {{ distribution.adviser.lastname }} {{ distribution.adviser.patronymic }}</td>
             <td>
                 <a href="{{ url_for('update_distribution', distribution_id=distribution.distribution_id) }}">Изменить</a>
                 <button onclick="showDeleteConfirmation({{ distribution.distribution_id }}, '{{ distribution.student_id }}', '{{ distribution.theme_id }}', '{{ distribution.adviser_id }}')">Удалить</button>
