Отображения текстовых данных в интерфейсе

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,9 @@
 <!--    <a href="{{ url_for('upload') }}">Загрузить данные из Excel</a>-->
     <a href="{{ url_for('save') }}"> Сохранить распределения в Excel</a>
     <a href="{{url_for('display_students')}}">Студенты</a>
+    <a href="{{url_for('display_advisers')}}">Преподаватели</a>
+    <a href="{{url_for('display_themes')}}">Темы</a>
+
     <table>
         <tr>
             <th>ID Распределения</th>
