--- a/templates/adviser_data.html
+++ b/templates/adviser_data.html
@@ -2,9 +2,92 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Научные руководители</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+
+        td, th {
+            border: 1px solid;
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: lightgray;
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+        a {
+            font-size: 16px;
+            padding: 5px 10px;
+            text-decoration: none;
+            color: #007bff;
+            border: 1px solid transparent;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        a:hover {
+            background-color: #e7f0ff;
+            border-color: #007bff;
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        button {
+            font-size: 16px;
+            padding: 5px 10px;
+            text-decoration: none;
+            color: #007bff;
+            border: 1px solid transparent;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            margin-bottom: 5px;
+            margin-top: 5px;
+            cursor: pointer; /* Добавлено для указания, что это кнопка */
+        }
+
+        button:hover {
+            background-color: #e7f0ff; /* Эффект при наведении */
+            border-color: #007bff; /* Эффект при наведении */
+        }
+    </style>
 </head>
 <body>
+    <h1>Список Научных руководителей</h1>
+    <a href="{{ url_for('index') }}">Вернуться на главную страницу</a>
+    <a href="{{ url_for('add_adviser') }}">Добавить научного руководителя</a>
+    <table>
+        <tr>
+            <th>ID Научного руководителя</th>
+            <th>Фамилия</th>
+            <th>Имя</th>
+            <th>Отчество</th>
+            <th>Количество мест</th>
+            <th>Удаление строки</th>
+        </tr>
+        {% for adviser in advisers %}
+        <tr>
+            <td>{{ adviser.adviser_id }}</td>
+            <td>{{ adviser.firstname }}</td>
+            <td>{{ adviser.lastname }}</td>
+            <td>{{ adviser.patronymic }}</td>
+            <td>{{ adviser.number_of_places }}</td>
+            <td>
+            <button onclick="showDeleteConfirmationAdviser({{ adviser.adviser_id }}, '{{ adviser.firstname }}', '{{ adviser.lastname }}', '{{ adviser.patronymic }}')">Удалить</button>
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
+    {% include 'modal_delete.html' %}
+    <script src="../static/modal_delete_adviser.js"></script>
 
 </body>
 </html>
