отображение неназначенных студентов

--- a/templates/student_data.html
+++ b/templates/student_data.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Студенты</title>
     <style>
-
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
