--- a/templates/adviser_data.html
+++ b/templates/adviser_data.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Научные руководители</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
         table {
             width: 100%;
             border-collapse: collapse;
