отображение неназначенных студентов

--- a/templates/adviser_data.html
+++ b/templates/adviser_data.html
@@ -72,7 +72,7 @@
         <tr>
             <th>ID Научного руководителя</th>
             <th>ФИО</th>
-            <th>Количество мест</th>
+            <th>Количество оставшихся мест</th>
             <th>Удаление строки</th>
         </tr>
         {% for adviser in advisers %}
