--- a/templates/theme_data.html
+++ b/templates/theme_data.html
@@ -46,6 +46,7 @@
 </head>
 <body>
     <h1>Список Тем</h1>
+        {% include 'dropdown_tables.html' %}
     <a href="{{url_for('index')}}">Вернуться на главную страницу</a>
     <a href="{{url_for('add_theme')}}">Добавить тему</a>
 
