--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,7 @@
     <a href="{{ url_for('add_distribution') }}">Добавить распределение</a>
     <a href="{{ url_for('save') }}"> Сохранить распределения в Excel</a>
     <a href="{{url_for('run_main')}}">Запустить алгоритм</a>
-    <a href="{{url_for('unassigned_students')}}">Неназначенные студенты</a>
-
+    <a href="{{url_for('form_student')}}">Анкета студента </a>
 
 
     <table>
