Добавлена форма входа

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
     <a href="{{ url_for('save') }}"> Сохранить распределения в Excel</a>
     <a href="{{url_for('run_main')}}">Запустить алгоритм</a>
     <a href="{{url_for('form_student')}}">Анкета студента </a>
+    <a href="{{url_for('login')}}">Вход</a>
 
 
     <table>
