--- a/templates/form_student.html
+++ b/templates/form_student.html
@@ -27,6 +27,21 @@
         p{
             font-size: 18px;
         }
+        button{
+            text-align: center;
+            margin: 7px;
+            padding: 7px;
+            background-color: #007BFF;
+            display: block;
+            color: white;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 4px;
+            margin-left: 75px;
+        }
+        button:hover{
+            background-color: blue;
+        }
     </style>
 </head>
 <body>
@@ -63,7 +78,8 @@
     {% endfor %}
     </tbody>
 </table>
-<!-- <a href="{{url_for('add_form')}}">Сохранить</a> -->
+
+<button type="submit">Сохранить заполненную анкету</button>
 
 <script>
     // Получаем все элементы select с классом priority-select
