Работа с таблицей по заданию для тем предметов и весов

--- a/templates/dropdown_tables.html
+++ b/templates/dropdown_tables.html
@@ -55,6 +55,7 @@
             <a href="{{ url_for('display_students') }}">Студенты</a>
             <a href="{{ url_for('display_advisers') }}">Преподаватели</a>
             <a href="{{ url_for('display_themes') }}">Темы</a>
+            <a href="{{url_for('assign_importances')}}">Задание темам весов</a>
 
         </div>
     </div>
