Работа с таблицей связи Научных руководителей и тем

--- a/templates/assign_importances.html
+++ b/templates/assign_importances.html
@@ -20,6 +20,12 @@
     .subject-row {
       margin-bottom: 5px;
     }
+    button{
+      padding: 7px;
+      border-radius: 3px;
+      font-size: 15px;
+      margin: 10px;
+    }
   </style>
 </head>
 <body>
